--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,9 +4,8 @@ footer {
 	text-align: center;
 	font-size: 2rem;
 	margin-top: 3rem;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	gap: 2rem;
+	display: flex;
+	justify-content: space-around;
 }
 
 .footer__logo {
@@ -21,25 +20,32 @@ footer {
 
 .footer__socials {
 	display: flex;
-	justify-content: start;
+	justify-content: center;
+	/* align-items: center; */
+	/* justify-content: start; */
 	gap: 1rem;
-	place-items: center;
-	padding-left: 3rem;
+	height: fit-content;
+	/* width: 100%; */
+	height: fit-content;
+	margin-top: -1rem;
+	padding: 0.5rem 1rem;
+	/* place-items: center; */
+	/* padding-left: 3rem; */
 	/* border: 1px solid red; */
 	/* margin-left: 4rem; */
 }
-.footer__socials a {
+/* .footer__socials a {
 	width: 3.5rem;
 	height: 3.5rem;
 	border: 1px solid #af812d;
 	border-radius: 50%;
 	color: #af812d;
 	padding: 0.8rem;
-}
-.footer__socials a:hover {
+} */
+/* .footer__socials a:hover {
 	color: #0496ff;
 	border: 1px solid #0496ff;
-}
+} */
 
 .footer__copyright {
 	/* margin-bottom: 1rem; */
@@ -49,7 +55,19 @@ footer {
 	font-size: 0.8rem;
 	text-align: center;
 }
-
+.footer-icon{
+	border: 2px solid #af812d;
+	border-radius: 50%;
+	padding: 1rem;
+	color: #af812d;
+	width: 100%;
+	height: 100%;
+}
+.footer__socials a{
+	color: #af812d;
+	width: 3.5rem;
+	height: 3.5rem;
+}
 /* @media screen and (max-width: 1024px) {
 	.footer__socials {
 		/* margin-left: -2rem; 
@@ -72,12 +90,13 @@ footer {
     width: 100%;
   }
   .footer__socials a{
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
   }
   .footer-icon{
     font-size: 24px;
     text-align: center;
     margin: auto;
+		padding: 0.5rem;
   }
 }
