--- a/src/components/Mainheader/Mainheader.css
+++ b/src/components/Mainheader/Mainheader.css
@@ -33,7 +33,7 @@
 
 @media screen and (max-width: 540px) {
 	.main__header {
-		margin-top: 70px;
+		margin-top: 120px;
 		gap: 1rem;
 	}
 	.header-writeup1 {
