--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -35,7 +35,9 @@ nav {
 	position: relative;
 }
 .show__nav {
-	background: red;
+	width: 100%;
+	background: rgb(4, 150, 255);
+	/* background: red; */
 }
 .active-nav::after {
 	content: '';
@@ -64,32 +66,40 @@ nav {
 		position: absolute;
 		top: 100%;
 		left: 0;
-		background-color: red;
 		width: 100%;
 		flex-direction: column;
 		gap: 0;
 		align-items: center;
 		justify-content: center;
 	}
-
+	.logo{
+		width: 3.5rem;
+		height: 3.5rem;
+	}
+	.logo img{
+		width: 100%;
+	}
 	.active-nav,
 	.active-nav::after {
 		display: none;
 	}
+	.nav__links{
+		display: none;
+	}
 
 	.nav__links li {
-		height: 3rem;
+		height: 8rem;
 		width: 100%;
 		box-shadow: -2rem 2rem 5rem rgba(0, 0, 0, 0.1);
-		background-color: green;
 	}
 
 	.nav__links li a {
-		background: rgb(4, 150, 255);
+		/* background: rgb(4, 150, 255); */
 		height: 100%;
 		width: 100%;
 		display: flex;
 		align-items: center;
+		text-align: center;
 		padding: 1rem 5rem 1rem 3rem;
 		color: white;
 	}
